Removed hover & added styled console.log

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <section class="section-projects">
-      <div class="description" id="description1">
+      <!-- <div class="description" id="description1">
         <p>This project was based around the game of Battleships, named ‘Sink the DictatorShips’. The biggest challenge was creating the ‘computer’ AI. Creating a function that plays the game logically after achieving it’s first randomised ‘hit’ of a ship, trying to find the rest of the ship nearby.</p>
       </div>
       <div class="description" id="description2">
@@ -32,7 +32,7 @@
       </div>
       <div class="description" id="description4">
         <p>I wanted to create a platform where friends can borrow and lend items, which are used infrequently. I found and implemented a gem called ‘has-friendship’ to create the friendship relationship between users. One of the challenges for this project, was creating requests for 2 individual users and a single item but only belonging to one of the users, and being able to accept/decline/cancel requests. I plan to take this application further by adding messaging between users regarding items.</p>
-      </div>
+      </div> -->
       <div class="projects">
         <p><a href="https://secure-beyond-16634.herokuapp.com/" target="_blank" id="proj1">Sink the Dictatorships</a></p>
         <p><a href="https://big-stitch-up.herokuapp.com/" target="_blank" id="proj2">Big Stitch Up</a></p>
