Adding Code First:Girls link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <p><a href="https://big-stitch-up.herokuapp.com/" target="_blank" id="proj2">Big Stitch Up</a></p>
         <p><a href="https://powerful-reef-28263.herokuapp.com/" target="_blank" id="proj3">Buff</a></p>
         <p><a href="https://stormy-plains-97072.herokuapp.com/" target="_blank" id="proj4">Community Chest</a></p>
+        <p><a href="http://actuary-fur-77653.bitballoon.com/" target="_blank" id="proja">Ronin MMA (Code First: Girls)</a></p>
         <h2>Projects</h2>
       </div>
     </section>
@@ -45,7 +46,7 @@
     <section class="section-about">
       <div class="about">
         <h2>About</h2>
-        <p>After graduating in 2014 with a First Class Honours degree in Mathematics, I completed a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course. Please find all projects on my GitHub and site links above.</p>
+        <p>After graduating in 2014 with a First Class Honours degree in Mathematics, I completed a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course and other outside projects. Please find all projects on my GitHub and site links above.</p>
       </div>
     </section>
 
