--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="section-contact">
       <div class="contact">
         <h2>Contact</h2>
-        <a href="https://drive.google.com/open?id=0BztkwtEk6Tq3TVJpVF9FTFRPYU0" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i></a>
+        <a href="https://drive.google.com/file/d/0BztkwtEk6Tq3bmZOY19rR3ZqRlk/view?usp=sharing" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i></a>
         <a href="http://github.com/AliceMarshall" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         <a href="http://linkedin.com/in/alicemarshall-1" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         <a href="mailto:marshall.alice92@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
