Update minor bits

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
       <div class="title">
         <img src="images/A-M-black.png" alt="personal logo" class="main-logo">
         <h1>Alice Marshall</h1>
-        <h2>Web Developer</h2>
+        <h2>Software Developer</h2>
       </div>
     </section>
-
     <section class="section-projects">
       <!-- <div class="description" id="description1">
         <p>This project was based around the game of Battleships, named ‘Sink the DictatorShips’. The biggest challenge was creating the ‘computer’ AI. Creating a function that plays the game logically after achieving it’s first randomised ‘hit’ of a ship, trying to find the rest of the ship nearby.</p>
@@ -34,32 +33,26 @@
         <p>I wanted to create a platform where friends can borrow and lend items, which are used infrequently. I found and implemented a gem called ‘has-friendship’ to create the friendship relationship between users. One of the challenges for this project, was creating requests for 2 individual users and a single item but only belonging to one of the users, and being able to accept/decline/cancel requests. I plan to take this application further by adding messaging between users regarding items.</p>
       </div> -->
       <div class="projects">
+        <p><a href="https://stormy-plains-97072.herokuapp.com/" target="_blank" id="proj4">Community Chest</a></p>
         <p><a href="https://secure-beyond-16634.herokuapp.com/" target="_blank" id="proj1">Sink the Dictatorships</a></p>
         <p><a href="https://big-stitch-up.herokuapp.com/" target="_blank" id="proj2">Big Stitch Up</a></p>
-        <p><a href="https://powerful-reef-28263.herokuapp.com/" target="_blank" id="proj3">Buff</a></p>
-        <p><a href="https://stormy-plains-97072.herokuapp.com/" target="_blank" id="proj4">Community Chest</a></p>
         <p><a href="http://actuary-fur-77653.bitballoon.com/" target="_blank" id="proja">Ronin MMA (Code First: Girls)</a></p>
         <h2>Projects</h2>
       </div>
     </section>
-
     <section class="section-about">
       <div class="about">
         <h2>About</h2>
-        <p>After graduating in 2014 with a First Class Honours degree in Mathematics, I completed a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course and other outside projects. Please find all projects on my GitHub and site links above.</p>
+        <p>I completed a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course and other outside projects. Please find all projects on my GitHub</p>
       </div>
     </section>
-
     <section class="section-contact">
       <div class="contact">
         <h2>Contact</h2>
-        <a href="https://drive.google.com/file/d/0BztkwtEk6Tq3bmZOY19rR3ZqRlk/view?usp=sharing" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i></a>
         <a href="http://github.com/AliceMarshall" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
         <a href="http://linkedin.com/in/alicemarshall-1" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         <a href="mailto:marshall.alice92@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       </div>
     </section>
-
-
   </body>
 </html>
