--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <body>
     <section class="section-title">
       <div class="title">
-        <img src="images/A-M-black.png" alt="personal logo" class="main-logo">
         <h1>Alice Marshall</h1>
         <h2>Software Developer</h2>
       </div>
@@ -43,7 +42,7 @@
     <section class="section-about">
       <div class="about">
         <h2>About</h2>
-        <p>I completed a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course and other outside projects. Please find all projects on my GitHub</p>
+        <p>Currently working at Kano Computing, since completing a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course and other outside projects. Please find all projects on my GitHub</p>
       </div>
     </section>
     <section class="section-contact">
