--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <p>I wanted to create a platform where friends can borrow and lend items, which are used infrequently. I found and implemented a gem called ‘has-friendship’ to create the friendship relationship between users. One of the challenges for this project, was creating requests for 2 individual users and a single item but only belonging to one of the users, and being able to accept/decline/cancel requests. I plan to take this application further by adding messaging between users regarding items.</p>
       </div> -->
       <div class="projects">
+        <p><a href="https://beta.artopia.app?accesskey=artopia-artspace" target="_blank" id="artopia">Artopia (Personal Project)</a></p>
+        <p><a href="https://world.kano.me" target="_blank" id="kano">Kano World</a></p>
         <p><a href="https://stormy-plains-97072.herokuapp.com/" target="_blank" id="proj4">Community Chest</a></p>
         <p><a href="https://secure-beyond-16634.herokuapp.com/" target="_blank" id="proj1">Sink the Dictatorships</a></p>
         <p><a href="https://big-stitch-up.herokuapp.com/" target="_blank" id="proj2">Big Stitch Up</a></p>
@@ -43,7 +45,7 @@
     <section class="section-about">
       <div class="about">
         <h2>About</h2>
-        <p>I completed a Web Development Immersive course at General Assembly in 2017. This is a portfolio of the projects I completed whilst on the course and other outside projects. Please find all projects on my GitHub</p>
+        <p>Currently working at Kano Computing, after completing a Web Development Immersive course at General Assembly in 2017. My current side project is <strong>Artopia</strong>, a multi-user drawing app for kids, which has now been encorporated into Kano's ecosystem.</p>
       </div>
     </section>
     <section class="section-contact">
