--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="section-title">
       <div class="title">
-        <img src="images/A-M-black.png" alt="personal logo" class="main-logo">
+        <!-- <img src="images/A-M-black.png" alt="personal logo" class="main-logo"> -->
         <h1>Alice Marshall</h1>
         <h2>Software Developer</h2>
       </div>
